ADD: Enhancements (PHPMyAdmin + SSH mount)

--- a/environments/includes/php-fpm.base.yml
+++ b/environments/includes/php-fpm.base.yml
@@ -5,7 +5,7 @@ x-volumes: &volumes
   - ${WARDEN_COMPOSER_DIR}:/home/www-data/.composer:cached
   - .${WARDEN_WEB_ROOT:-}/:/var/www/html:cached
   - bashhistory:/bash_history
-  - sshdirectory:/home/www-data/.ssh
+  - ${WARDEN_HOME_DIR}/.ssh:/home/www-data/.ssh
 
 x-extra_hosts: &extra_hosts
     - ${TRAEFIK_DOMAIN}:${TRAEFIK_ADDRESS:-0.0.0.0}
