--- a/environments/includes/db.base.yml
+++ b/environments/includes/db.base.yml
@@ -15,5 +15,19 @@ services:
     volumes:
       - dbdata:/var/lib/mysql
 
+  phpmyadmin:
+    hostname: "${WARDEN_ENV_NAME}-phpmyadmin"
+    image: phpmyadmin/phpmyadmin:latest
+    environment:
+      - PMA_HOST=db
+    depends_on:
+      - db
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.${WARDEN_ENV_NAME}-phpmyadmin.priority=3
+      - traefik.http.routers.${WARDEN_ENV_NAME}-phpmyadmin.tls=true
+      - traefik.http.routers.${WARDEN_ENV_NAME}-phpmyadmin.rule=Host(`phpmyadmin.${TRAEFIK_DOMAIN}`)
+      - traefik.http.services.${WARDEN_ENV_NAME}-phpmyadmin.loadbalancer.server.port=80
+
 volumes:
   dbdata:
